# openstack-chef-specs

./: .gitignore  .gitreview  CONTRIBUTING.rst  HACKING.rst  MAINTAINERS.md  README.rst  requirements.txt  setup.cfg  tox.ini
doc/: Makefile
doc/source/: conf.py  index.rst
specs/: template.rst
specs/icehouse/: template.rst
specs/juno/common/: bump-chef-to-11-16.rst  cookbook-versioning.rst  no-secret-attributes.rst
specs/juno/network/: neutron-vpnaas-enablement.rst
specs/kilo/bare-metal/: bare-metal-enablement.rst
specs/kilo/network/: enable-dvr-in-chef-cookbook.rst
specs/kilo/openstack-docker/: openstack-docker.rst
specs/liberty/all/: refactor_config_templates.rst
specs/liberty/network/: ip-address-movement-for-ovs-bridges.rst
specs/liberty/openstack-powervm/: openstack-powervm.rst
specs/ocata/all/: drop-admin-endpoints.rst
